--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,19 +1,20 @@
 services:
-    zikula_pagelock_module.page_lock_repository:
-        class: Zikula\PageLockModule\Entity\Repository\PageLockRepository
-        factory: ["@doctrine.orm.default_entity_manager", getRepository]
-        arguments: ["ZikulaPageLockModule:PageLockEntity"]
+    _defaults:
+        autowire: true
+        autoconfigure: true
+        public: false
+        bind:
+            $bundle: '@Zikula\PageLockModule\ZikulaPageLockModule'
 
-    zikula_pagelock_module.api.locking:
-        class: Zikula\PageLockModule\Api\LockingApi
+    Zikula\PageLockModule\:
+        resource: '../../*'
+        exclude: '../../{bootstrap.php,Tests,vendor}'
+
+    Zikula\PageLockModule\Api\ApiInterface\LockingApiInterface: '@Zikula\PageLockModule\Api\LockingApi'
+
+    Zikula\PageLockModule\Api\LockingApi:
         arguments:
-          - "@twig"
-          - "@request_stack"
-          - "@doctrine.orm.default_entity_manager"
-          - "@zikula_pagelock_module.page_lock_repository"
-          - "@zikula_users_module.current_user"
-          - "@zikula_core.common.theme.assets_js"
-          - "@zikula_core.common.theme.assets_css"
-          - "@zikula_core.common.theme.assets_footer"
-          - "@zikula_core.common.theme.asset_helper"
-          - "%temp_dir%"
+          $jsAssetBag: '@zikula_core.common.theme.assets_js'
+          $cssAssetBag: '@zikula_core.common.theme.assets_css'
+          $footerAssetBag: '@zikula_core.common.theme.assets_footer'
+          $tempDir: '%temp_dir%'
