--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -4,7 +4,7 @@ services:
         autoconfigure: true
         public: false
         bind:
-            $bundle: '@Zikula\PageLockModule\ZikulaPageLockModule'
+          $extension: '@Zikula\PageLockModule\ZikulaPageLockModule'
 
     Zikula\PageLockModule\:
         resource: '../../*'
